changes to game answers with layout file and button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="button_one">1</string>
     <string name="button_2">2</string>
     <string name="button_3">3</string>
+    <string name="onion_booty_description">Onion_Booty</string>
+    <string name="milking_Peter_Description">Milking Peter</string>
+    <string name="donkey_description">donkey</string>
 </resources>
